--- a/front/src/components/auth/singup/style.css
+++ b/front/src/components/auth/singup/style.css
@@ -34,7 +34,7 @@
     border-color: green;
   }
   
-  .container button {
+  .container .singUpBtn {
     height: 40px;
     width: 200px;
     outline: none;
@@ -44,12 +44,12 @@
     border-radius: 30px;
   }
   
-  .container button:hover {
+  .container .singUpBtn:hover {
     background: deeppink;
     color: white;
   }
   
-  .container .sign-up-form button {
+  .container .sign-up-form .singUpBtn {
     margin-top: 5px;
   }
   
