--- a/front/src/components/auth/singin/style.css
+++ b/front/src/components/auth/singin/style.css
@@ -5,7 +5,8 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: auto;
+  margin-top: 15%;
+
 }
 
 .container .sign-in-form {
