Many fixes have been made

--- a/front/src/components/auth/singin/style.css
+++ b/front/src/components/auth/singin/style.css
@@ -1,69 +1,210 @@
-.container {
-  height: 502px;
-  width: 554px;
-  overflow: hidden;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 15%;
-
+@media only screen and (max-width: 678px) {
+  .container .sign-in-form {
+    width: 250px;
+    height: 300px;
+    background: white;
+    border-radius: 20px;
+    box-shadow: 1px 1px 5px black;
+    text-align: center;
+    line-height: 50px;
+    margin-left: 2px;
+  }
+  
+  .container .box {
+    border: none;
+    outline: none;
+    padding: wpx;
+    margin-top: 30px;
+    border-bottom: 2.4px solid black;
+  }
+  
+  .container .box:focus {
+    border-color: green;
+  }
+  
+  .container .singInBtn {
+    height: 20px;
+    width: 100px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    margin-top: 80px;
+    border-radius: 30px;
+  }
+  
+  .container .singInBtn:hover {
+    background: deeppink;
+    color: white;
+  }
+  
+  .container .sign-in-form .singInBtn {
+    margin-top: 5px;
+  }
+  
+  .switch-buttons {
+    position: absolute;
+    top: 20%;
+  }
+  
+  .switch-buttons a {
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+    margin: 10px;
+    font-size: 20px;
+    transition: .5s;
+  }
 }
 
-.container .sign-in-form {
-  width: 300px;
-  background: white;
-  border-radius: 20px;
-  box-shadow: 1px 1px 5px black;
-  text-align: center;
-  line-height: 50px;
-  margin-left: 2px;
+@media only screen and (min-width: 920px) {
+  .container {
+    overflow: hidden;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .container .sign-in-form {
+    width: 300px;
+    height: 350px;
+    background: white;
+    border-radius: 20px;
+    box-shadow: 1px 1px 5px black;
+    text-align: center;
+    line-height: 50px;
+    margin-top: 10%;
+    margin-left: 30%;
+    margin-bottom: 1%;
+  }
+
+  .container .reset-password {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    text-align: center;
+    margin-top: 360px;
+    margin-left: 2px;
+  }
+  
+  .container .box {
+    border: none;
+    outline: none;
+    padding: wpx;
+    margin-top: 30px;
+    border-bottom: 2.4px solid black;
+  }
+  
+  .container .box:focus {
+    border-color: green;
+  }
+  
+  .container .singInBtn {
+    height: 40px;
+    width: 200px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    margin-top: 80px;
+    border-radius: 30px;
+  }
+  
+  .container .singInBtn:hover {
+    background: deeppink;
+    color: white;
+  }
+  
+  .container .sign-in-form .singInBtn {
+    margin-top: 5px;
+  }
+  
+  .switch-buttons {
+    position: absolute;
+    top: 20%;
+  }
+  
+  .switch-buttons a {
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+    margin: 10px;
+    font-size: 20px;
+    transition: .5s;
+  }
 }
 
-.container .sign-in-form {
-  height: 350px;
+@media only screen and (min-width: 1200px) {
+  .container {
+    overflow: hidden;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .container .sign-in-form {
+    width: 300px;
+    height: 350px;
+    background: white;
+    border-radius: 20px;
+    box-shadow: 1px 1px 5px black;
+    text-align: center;
+    line-height: 50px;
+    padding-bottom: 200px;
+    margin-top: -5%;
+    margin-left: -5%;
+  }
+
+  .container .reset-password {
+    width: 300px;
+    height: 400px;
+    position: absolute;
+    text-align: center;
+    margin-top: 47%;
+    margin-left: -4%;
+  }
+  
+  .container .box {
+    border: none;
+    outline: none;
+    padding: wpx;
+    margin-top: 30px;
+    border-bottom: 2.4px solid black;
+  }
+  
+  .container .box:focus {
+    border-color: green;
+  }
+  
+  .container .singInBtn {
+    height: 40px;
+    width: 200px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    margin-top: 80px;
+    border-radius: 30px;
+  }
+  
+  .container .singInBtn:hover {
+    background: deeppink;
+    color: white;
+  }
+  
+  .container .sign-in-form .singInBtn {
+    margin-top: 5px;
+  }
+  
+  .switch-buttons {
+    position: absolute;
+    top: 20%;
+  }
+  
+  .switch-buttons a {
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+    margin: 10px;
+    font-size: 20px;
+    transition: .5s;
+  }
 }
 
-.container .box {
-  border: none;
-  outline: none;
-  padding: wpx;
-  margin-top: 30px;
-  border-bottom: 2.4px solid black;
-}
-
-.container .box:focus {
-  border-color: green;
-}
-
-.container .singInBtn {
-  height: 40px;
-  width: 200px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  margin-top: 80px;
-  border-radius: 30px;
-}
-
-.container .singInBtn:hover {
-  background: deeppink;
-  color: white;
-}
-
-.container .sign-in-form .singInBtn {
-  margin-top: 5px;
-}
-
-.switch-buttons {
-  position: absolute;
-  top: 20%;
-}
-
-.switch-buttons a {
-  color: white;
-  text-decoration: none;
-  padding: 5px;
-  margin: 10px;
-  font-size: 20px;
-  transition: .5s;
-}
